changed my name

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <h1>hello 2024
     </h1>
     <a href="mailto:">send email</a>
+
+    <p>My name is Danny
+        
+    </p>
 <!-- example of how to link pages -->
 <a href="./pages/about.html">About</a>
 
